--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,8 +45,8 @@ const { title } = Astro.props;
 	}
 
 	main {
-		max-width: 70ch;
-		margin: 0 auto;
+		max-width: 60ch;
+		margin: 5ch;
 		padding: 6rem 2rem 4rem;
 	}
 
