--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,10 +7,11 @@ import '../message.css'
 import 'katex/dist/katex.min.css'
 import 'highlight.js/styles/atom-one-dark.css'
 ---
-
 <Layout title="ChatGPT API Demo">
+  <Header />
   <main >
     <Generator client:load />
   </main>
+ <Footer />
 </Layout>
 
