--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,10 +8,10 @@ import 'katex/dist/katex.min.css'
 import 'highlight.js/styles/atom-one-dark.css'
 ---
 <Layout title="ChatGPT API Demo">
-  <Header />
   <main >
+    <Header />
     <Generator client:load />
   </main>
- <Footer />
+ <center><Footer /></center>
 </Layout>
 
