--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,7 +46,12 @@ const { title } = Astro.props;
 
 	main {
 		max-width: 60ch;
-		margin: 5ch;
+		margin-right: 0;
+		padding: 6rem 2rem 4rem;
+	}
+	left {
+		max-width: 60ch;
+		margin-lift: 0;
 		padding: 6rem 2rem 4rem;
 	}
 
