--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
+import site from '../components/site.astre'
 import Generator from '../components/Generator'
 import '../message.css'
 import 'katex/dist/katex.min.css'
@@ -12,5 +13,8 @@ import 'highlight.js/styles/atom-one-dark.css'
     <Header />
     <Generator client:load />
   </main>
+  <left>
+    <site />
+  </left>
  <center><Footer /></center>
 </Layout>
